Add description and color metas

--- a/css/processed/main.scss
+++ b/css/processed/main.scss
@@ -1,7 +1,7 @@
 
 * { box-sizing: border-box; }
 
-$box-color: #3E5A73; /* #6C98BE */
+$box-color: #3E5A73;
 $text-color: #D5E2EB;
 $bg-color: #51728E;
 
