--- a/html-tutorial/main.css
+++ b/html-tutorial/main.css
@@ -71,9 +71,18 @@ section > h2 {
 .box-content {
   background-color: white;
   padding-top: 35px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
-@media (max-width:500px) {
+@media (min-width:701px) {
+  
+  .box-model {
+    margin: 40px 10%;
+  }
+}
+
+@media (max-width:700px) {
   
   body {
     padding: 10px;
