--- a/room-cleaner/main.css
+++ b/room-cleaner/main.css
@@ -13,6 +13,11 @@ body {
   height: 500px;
 }
 
+#success-message {
+  display: none;
+  margin-top: 20px;
+}
+
 .buttons {
   display: inline-flex;
   flex-direction: column;
