HTML Tutorial - example layout (a little fix in features)

--- a/html-tutorial/layout/index.html
+++ b/html-tutorial/layout/index.html
@@ -94,7 +94,7 @@
 
       <div>
         <i class="fa fa-star-o feature3" aria-hidden="true"></i>          
-        <h2>Spark your Imagination</h2>
+        <h2>Imagination</h2>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ipsum ante, ultricies a maximus vel, finibus in metus.</p>
       </div>
