HTML Tutorial - minor visual changes

--- a/html-tutorial/layout/index.html
+++ b/html-tutorial/layout/index.html
@@ -72,7 +72,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ipsum ante, ultricies a maximus vel, finibus in metus. Etiam tempor est nec elementum rhoncus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus ullamcorper quam nec egestas consectetur.
       </p>
       <p>
-        Nulla nec elit quis quam ullamcorper sagittis. Nulla facilisi. Vivamus consectetur iaculis orci. Integer lacinia, nulla non tempus efficitur, metus nulla fermentum magna, vitae interdum arcu diam eget justo. Nam iaculis laoreet ligula in ultricies. Vivamus consequat ullamcorper facilisis..
+        Nulla nec elit quis quam ullamcorper sagittis. Nulla facilisi. Vivamus consectetur iaculis orci. Integer lacinia, nulla non tempus efficitur, metus nulla fermentum magna, vitae interdum arcu diam eget justo. Nam iaculis laoreet ligula in ultricies. Vivamus consequat ullamcorper facilisis.
       </p>
     </div> 
     
