--- a/code-then/main.css
+++ b/code-then/main.css
@@ -62,7 +62,7 @@ main {
 footer {
   margin-top: 50px;
   height: 50px;
-  background: #000041;
+  background-image: url(stars.jpg);
 }
 
 /* Typed: animated blinking cursor */
