--- a/code-then/main.css
+++ b/code-then/main.css
@@ -61,8 +61,9 @@ main {
 
 footer {
   margin-top: 50px;
-  height: 50px;
+  height: 100px;
   background-image: url(stars.jpg);
+  background-position: center 30%;
 }
 
 /* Typed: animated blinking cursor */
