--- a/code-then/main.css
+++ b/code-then/main.css
@@ -15,6 +15,12 @@ header {
   justify-content: center;
 }
 
+.title-icon {
+  height: 45px;
+  margin-bottom: -15px;
+  margin-right: 7px;
+}
+
 .flag {
   display: inline-flex;
   position: absolute;
@@ -52,7 +58,7 @@ button:hover {
 }
 
 h1 {
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 main {
@@ -88,6 +94,12 @@ footer {
   display: flex;
   align-items: center;
 }
+
+footer > div {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}   
 
 footer a {
   color: white;
