Remove blinking cursor from section titles

--- a/css/processed/code-then.scss
+++ b/css/processed/code-then.scss
@@ -6,7 +6,7 @@ $main-color-light: rgb(100, 85, 200);
 $main-color-lighter: rgb(139, 130, 219);
 $main-color-lightest: rgb(203, 198, 255);
 
-$font-code-then: 'Verdana', Geneva, sans-serif;
+$font-code-then: 'Verdana', sans-serif;
 $font-text: 'Open Sans', sans-serif;
 
 * { box-sizing: border-box; }
