Improve UX of CV

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3285,11 +3285,11 @@ input, select, textarea {
 			@media screen and (max-width: 1280px) {
 
 				.wrapper.fullscreen {
-					min-height: calc(70vh);
+					min-height: calc(100vh - 2.5em);
 				}
 
 					body.is-ie .wrapper.fullscreen {
-						height: calc(70vh);
+						height: calc(100vh - 2.5em);
 					}
 
 			}
