--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3229,9 +3229,13 @@ input, select, textarea {
 			@media screen and (max-width: 736px) {
 
 				.wrapper > .inner {
-					padding: 3em 2em 1em 2em ;
+					padding: 3em 0 1em 0 ;
 				}
 
+				.wrapper > .inner > div {
+					padding-left: 2em;
+					padding-right: 2em;
+				}
 			}
 
 		.wrapper.alt {
